# erc-8004-ai-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-notebook.txt  requirements.txt
app/: cache.py  deps.py  main.py  schemas.py
benchmarks/: apply_labels.py  bench_enriched_linear.py  bench_llm_only.py  clean_baselines_ab.py  comprehensive_bench_gold.py  convention_label.py  dump_batch.py  error_analysis.py  eval_pure_others.py  label_with_opus.py  merge_silver_gold.py  per_tag_svm.py  pipeline_3tier.py  pipeline_3tier_v2.py  pipeline_combiner.py  pipeline_qty_svm.py  pipeline_run10.py  pipeline_run11.py  pipeline_run12.py  pipeline_run13.py  pipeline_run14.py  pipeline_run15.py  pipeline_run16.py  pipeline_run8.py  pipeline_run9.py  prepare_balanced_silver.py  prepare_others_for_labeling.py  prepare_pure_others_gold.py  run_all_benchmarks.py  run_bge_svm_optimized.py  stage3_domain.py  stage_combiner.py  stratified_resample_gold.py  sweep_run12.py  sync_gold_scale.py  tune_thresholds.py
docs/: agent_domain_text_unification_spec.md  benchmark_configurations_explained.md  benchmark_results_gold_comprehensive.md  error_analysis_llm_only.md  run14_benchmark_report.md  stratified_sampling_report.md  thesis_chapter_classification.md  unified_classifier_evaluation_report.md  unified_classifier_proposal 1.md  unified_classifier_proposal.md
notebooks/: 00_setup.ipynb  01_data_extraction.ipynb  02_agent_summary.ipynb  03_approach_a_zeroshot.ipynb  04_approach_b_embedding.ipynb  05_approach_c_fewshot.ipynb  06_evaluation.ipynb
(+23 files in other folders)
