[project]
name = "erc8004-ai"
version = "0.1.0"
description = "ERC-8004 feedback classification: zero-shot LLM vs embedding ML vs few-shot retrieval"
requires-python = ">=3.11,<3.14"

dependencies = [
    # Data + Mongo
    "pymongo>=4.6,<5",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "pyarrow>=15",
    "numpy>=1.26,<3",

    # HTTP for Ollama
    "httpx>=0.27",

    # FastAPI server (Go calls this over HTTP)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",

    # ML — embeddings + classical classifiers
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
    "torch>=2.2",

    # Eval + viz
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",

    # Notebooks
    "jupyter>=1.1",
    "ipykernel>=6.29",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4",
    "ipython>=8",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
